tests/baselines/reference/checkJsxChildrenProperty4.errors.txt
tests/cases/conformance/jsx/file.tsx(24,28): error TS2551: Property 'NAme' does not exist on type 'IUser'. Did you mean 'Name'?
tests/cases/conformance/jsx/file.tsx(32,10): error TS2746: This JSX tag's 'children' prop expects a single child of type '(user: IUser) => Element', but multiple children were provided.


==== tests/cases/conformance/jsx/file.tsx (2 errors) ====
    import React = require('react');
    
    interface IUser {
        Name: string;
    }
    
    interface IFetchUserProps {
        children: (user: IUser) => JSX.Element;
    }
    
    class FetchUser extends React.Component<IFetchUserProps, any> {
        render() {
            return this.state
                ? this.props.children(this.state.result)
                : null;
        }
    }
    
    // Error
    function UserName() {
        return (
            <FetchUser>
                { user => (
                    <h1>{ user.NAme }</h1>
                               ~~~~
!!! error TS2551: Property 'NAme' does not exist on type 'IUser'. Did you mean 'Name'?
!!! related TS2728 tests/cases/conformance/jsx/file.tsx:4:5: 'Name' is declared here.
                ) }
            </FetchUser>
        );
    }
    
    function UserName1() {
        return (
            <FetchUser>
             ~~~~~~~~~
!!! error TS2746: This JSX tag's 'children' prop expects a single child of type '(user: IUser) => Element', but multiple children were provided.
    
    
                
                { user => (
                    <h1>{ user.Name }</h1>
                ) }
                { user => (
                    <h1>{ user.Name }</h1>
                ) }
            </FetchUser>
        );
    }